Fix transition flickering

--- a/app/components/ServiceView.css
+++ b/app/components/ServiceView.css
@@ -7,6 +7,6 @@
    position: absolute !important;
    top: -9999px !important;
    left: -9999px !important;
-   width: 2000px !important;
-   height: 2000px !important;
+   width: 100% !important;
+   height: 100% !important;
 }
